--- a/css/modules/example.css
+++ b/css/modules/example.css
@@ -6,3 +6,11 @@
 }
 
 .example__code pre { margin: 0 0 20px; }
+
+/* ---- 100% width & height ---- */
+
+/* set arbitrary height */
+.example__demo--full-bleed {
+  height: 300px;
+  margin-bottom: 50px;
+}
